module/books.js and styles.css files

--- a/style.css
+++ b/style.css
@@ -1,8 +1,4 @@
 * {
-  margin: 0;
-  padding: 0;
-  outline: 0;
-  border: 0;
   box-sizing: border-box;
   text-decoration: none;
   list-style: none;
@@ -18,6 +14,17 @@ h1 {
   font-size: 1.3rem;
   margin: 1.6rem 0 2rem;
   color: #0062cc;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  border: 0;
+}
+
+.content-section ul {
+  text-align: center;
 }
 
 form {
