--- a/style.css
+++ b/style.css
@@ -1,9 +1,3 @@
-* {
-  box-sizing: border-box;
-  text-decoration: none;
-  list-style: none;
-  overflow-x: hidden;
-}
 
 body {
   font-family: 'Poppins', sans-serif;
@@ -21,6 +15,10 @@ h1 {
   padding: 0;
   outline: 0;
   border: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
+  overflow-x: hidden;
 }
 
 .content-section ul {
@@ -59,7 +57,7 @@ button[type='submit']:hover {
   background-color: #0062cc;
 }
 
-nav ul {
+.nav-ul {
   display: flex;
   justify-content: flex-end;
   align-items: self-end;
